--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
     box-sizing: border-box;
 }
 
+#preloader{
+    height: 100vh;
+    width: 100%;
+    z-index: 100000;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: whitesmoke;
+}
+
 body{
     height: 100vh;
     display: flex;
