changed preloader background color

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
+    background-color: rgb(24, 23, 23);
 }
 
 body{
