--- a/style.css
+++ b/style.css
@@ -21,14 +21,6 @@
   background-color: rgb(24, 23, 23);
 }
 
-body {
-  position: relative;
-  width: 100vw;
-  min-height: 100vh;
-  transition: all 1s;
-  overflow: hidden;
-}
-
 body::before {
   content: "";
   position: absolute;
@@ -40,15 +32,37 @@ body::before {
   opacity: 0.8;
 }
 
+#wrapper{
+  display: flex;
+  width: 200vw;
+  transform: rotate(90deg) translateY(-100vh);
+  transform-origin: top left;
+}
+
+#outer-wrapper{
+  width: 100vh;
+  height: 100vw;
+  transform: rotate(-90deg) translateX(-100vh);
+  transform-origin: top left;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: absolute;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar{
+  display: none;
+}
+
 #clock {
   min-height: 100vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  /* width: 100vw; */
-  position: absolute;
-  width: 100%;
+  width: 100vw;
+  position: relative;
 }
 
 .right-scroll {
@@ -239,9 +253,8 @@ body::before {
 #timer {
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
-  width: 100%;
-  position: absolute;
-  left: 100%;
+  width: 100vw;
+  position: relative;
 }
 
 .left-scroll {
