--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,700;1,600&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;1,400&display=swap");
 
 * {
   margin: 0;
@@ -9,6 +9,8 @@
 
 :root {
   --toping: calc(50vh-15px);
+  --nav-bg: #5161ce;
+  --nav-font: rgba(255, 255, 255, 0.5);
 }
 
 #preloader {
@@ -22,7 +24,7 @@
   background-color: rgb(24, 23, 23);
 }
 
-body{
+body {
   height: fit-content;
 }
 
@@ -37,49 +39,57 @@ body::before {
   opacity: 0.8;
 }
 
-#nav-bar{
+#nav-bar {
   display: flex;
   width: 100vw;
-  background-color: #39393ab0;
+  background-color: var(--nav-bg);
   position: fixed;
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  height: 10vh;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
 }
 
-#nav-bar ul{
+#nav-bar ul {
   display: flex;
   justify-content: space-evenly;
   width: 90%;
+  flex-wrap: wrap;
 }
 
-#nav-bar ul li{
+#nav-bar ul li {
   list-style: none;
   text-decoration: none;
 }
 
-#nav-bar ul li button{
+#nav-bar ul li button {
   background: none;
   cursor: pointer;
   border: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1.25rem;
-  color: #89e7ec;
+  color: var(--nav-font);
   transition: all 0.4s;
 }
 
-#nav-bar ul li button:hover{
-  color: #221ee6d7;
+#nav-bar ul li button:hover {
+  color: #fff;
 }
 
-#wrapper{
+.active{
+  color: #fff;
+}
+
+#wrapper {
   display: flex;
   width: 200vw;
   transform: rotate(90deg) translateY(-100vh);
   transform-origin: top left;
 }
 
-#outer-wrapper{
+#outer-wrapper {
   width: 100vh;
   height: 100vw;
   transform: rotate(-90deg) translateX(-100vh);
@@ -91,7 +101,7 @@ body::before {
   -ms-overflow-style: none;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
 
@@ -223,6 +233,7 @@ body::before {
   width: calc(50vh);
   background: url("./Images/clock.png") no-repeat center center/cover;
   position: relative;
+  margin-top: 10vh;
 }
 
 @media only screen and (max-width: 340px) {
@@ -288,6 +299,7 @@ body::before {
 #digital {
   text-align: center;
   font-family: "Lobster", cursive;
+  font-size: 1.5rem;
 }
 
 #timer {
